# Edwin-AI-workflow

./: .editorconfig  .gitignore  .gitlab-ci.yml  CONTRIBUTING.rst  Containerfile  README.md  README.rst  TODO.rst  noxfile.py  pdm.lock.license  pyproject.toml  requirements.txt  tasks.py
config/: workflow_config.yaml
docs/examples/: dotenv
examples/: access_request.workflow.yaml  critical_router_event.workflow.yaml  sample_prompts.md
inputs/: edwinAI_Action_Group_List.json  edwinAI_config_demolab.json  lm_alert_processing_base.yaml  lm_alert_processing_v3.0.json
src/ai_workflow/: app.py  main.py
src/ai_workflow/action_groups/: __init__.py
src/ai_workflow/config/: constants.py  env.py  loader.py  models.py
src/ai_workflow/engine/: action_group_compiler.py  action_group_validator.py  action_group_yaml.py  audit.py  checkpoint.py  code_runner.py  input_resolver.py  mock_executor.py  reference_validator.py  typescript_code_runner.py  validator.py  workflow_file_validator.py  workflow_normalizer.py  workflow_runner.py  workflow_yaml.py
src/ai_workflow/generator/: action_group_generator.py  code_generator.py  code_templates.py  output_writer.py  prompts.py  workflow_generator.py
src/ai_workflow/integrations/: __init__.py  access.py  alert.py  event.py  runtime.py  servicenow.py
src/ai_workflow/llm/: base.py  mock_provider.py  openai_provider.py  provider_factory.py
src/ai_workflow/mcp/: action_catalog_context.py  (+5 more)
tests/: test_action_catalog.py  test_action_catalog_source_factory.py  test_action_field_catalog.py  test_action_field_catalog_context.py  test_action_group_compiler.py  test_action_group_generation_prompt.py  test_action_group_generator.py  test_action_group_model.py  test_action_group_validator.py  test_action_group_yaml.py  test_action_service_submitter.py  test_action_ui_context.py  test_app.py  test_audit.py  test_checkpoint.py  test_code_generator.py  test_code_runner.py  test_code_templates.py  test_config_loader.py  test_context_requirements.py  test_default_registry.py  test_env_loader.py  test_input_resolver.py  test_llm_base.py  test_llm_provider_factory.py  test_lm_alert_processing_customizer.py  test_main.py  test_mcp_context_gatherer.py  test_mock_access_tool.py  test_mock_alert_tool.py  test_mock_event_tool.py  test_mock_executor.py  test_mock_llm_provider.py  test_mock_servicenow_tool.py  test_openai_provider.py  test_orchestration_parsers.py  test_orchestrator_agent.py  test_output_writer.py  test_plan_validator.py  test_prompts.py  (+15 more)
(+66 files in other folders)
