[project]
name = "ai-workflow"
version = "0.1.0"
description = "Simple modular AI workflow project"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.0",
    "openai>=2.41.1",
    "pytest>=9.1.0",
    "streamlit>=1.58.0",
]

[project.scripts]
ai-workflow = "ai_workflow.main:main"
ai-workflow-ui = "ai_workflow.ui.streamlit_app:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_workflow = ["**/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
